maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:14: error: not found: value y
      if (aBiscuit(x, y))
                      ^ShortestPathMaze:16: error: not found: value y
        setIndication(x, y, 0)
                         ^